--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+certifi==2023.7.22
+charset-normalizer==3.2.0
 cssselect==1.2.0
 gpxpy==1.5.0
+idna==3.4
 lxml==4.9.3
 pyquery==2.0.0
 python-Levenshtein==0.12.2
+requests==2.31.0
 thefuzz==0.19.0
+tqdm==4.65.0
+urllib3==2.0.4
